Closed Bug 10563 Opened 26 years ago Closed 26 years ago

[CODE] Assert in ComputeBackgroundAnchorPoint

Categories

(Core :: Layout, defect, P3)

x86
Windows NT
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: troy, Assigned: troy)

References

()

Details

When viewing the URL above, if you scroll the page down you'll trigger an assert in ComputeBackgroundAnchorPoint() if you're running a debug build The assert is a post-condition that verifies that the tile point is range
Status: NEW → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
Based on Troy's comments, marking this report as verified fixed.
You need to log in before you can comment on or make changes to this bug.