Fix for bug #10563 where we were triggering a post condition assertion. Changed ComputeBackgroundAnchorPoint() to correctly calculate tile offset that is a multiple of the tile